# meadows-web

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
captain-hooks/: backup_files.sh  restore_files.sh
shared_keys/: jwt.key
src/meadows/web/: __init__.py  __main__.py  app.py  build.py
src/meadows/web/static/: link-popup.js
src/meadows/web/templates/: index.html
tests/: conftest.py  test_app.py  test_build.py
