[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meadows-web"
dynamic = ["version"]
description = "MEADOWS web host: serves index.html and static assets. Dumb HTTP host, no domain logic."
readme = "README.md"
requires-python = ">=3.12"
license-expression = "MIT"
authors = [{ name = "MEADOWS" }]
dependencies = [
    "meadows-protocol",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.optional-dependencies]
dev = ["hatch", "pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "httpx>=0.27.0", "ruff==0.14.9"]

[tool.hatch.version]
path = "src/meadows/web/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/meadows"]

[tool.uv.sources]
meadows-protocol = { path = "../meadows-protocol", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "Q", "A", "SIM", "ARG", "PTH", "RUF", "C90", "N", "YTT"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
